feat: replace Cohere API key with VoyageAI API key and update related configurations

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,8 @@ WEAVIATE_TIMEOUT_QUERY=60
 WEAVIATE_TIMEOUT_INSERT=120
 WEAVIATE_STARTUP_PERIOD=5
 
+# VoyageAI for vector embeddings (required for Weaviate MCP)
+VOYAGEAI_API_KEY=pa-your-voyageai-api-key-here
+
 # Third-party API keys (optional)
-# COHERE_API_KEY=your-cohere-api-key
 # OPENAI_API_KEY=your-openai-api-key
