--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,25 @@
+# Pre-Commit Configuration
+# https://pre-commit.com/
+#
+# Installation:
+#   uv run pre-commit install
+#
+# Run manually:
+#   uv run pre-commit run --all-files
+
 repos:
+  # Gitleaks - Secret Detection
+  # Prevents committing API keys, tokens, and credentials
+  - repo: https://github.com/gitleaks/gitleaks
+    rev: v8.21.2
+    hooks:
+      - id: gitleaks
+        name: Detect secrets
+        entry: gitleaks protect --verbose --staged
+        language: system
+        stages: [pre-commit]
+        pass_filenames: false
+
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.6.0
     hooks:
